w00t        2007/01/10 16:58:00 UTC	(20070110-7433)
  Log:
  Remove restriction on self memoing, remove flood restriction for users with general:flood

  Changes:	Modified:
  +1 -8		trunk/modules/memoserv/send.c (File Modified) 


jilles      2007/01/10 15:03:01 UTC	(20070110-7431)
  Log:
  Set Id and Revision keywords on os_logonnews.c.
  

  Changes:	Modified:
  +2 -2		trunk/contrib/os_logonnews.c (File Modified) (Property Modified)


w00t        2007/01/10 13:30:08 UTC	(20070110-7429)
  Log:
  Add nenolod/jilles' os_logonnews to contrib/

  Changes:	Modified:
  +2 -1		trunk/contrib/Makefile.in (File Modified) 
  +267 -0	trunk/contrib/os_logonnews.c (File Added) 


jilles      2007/01/06 00:26:17 UTC	(20070106-7423)
  Log:
  Add documentation for SASL client protocol.
  

  Changes:	Modified:
  +113 -1	trunk/doc/SASL (File Modified) 


jilles      2007/01/02 20:40:03 UTC	(20070102-7421)
  Log:
  When upgrading custom modules need to be recompiled as well.
  

  Changes:	Modified:
  +3 -0		trunk/INSTALL (File Modified) 


jilles      2007/01/01 14:09:36 UTC	(20070101-7419)
  Log:
  Extend some copyrights to 2007.
  

  Changes:	Modified:
  +1 -1		trunk/COPYING (File Modified) 
  +1 -1		trunk/doc/LICENSE (File Modified) 
  +2 -2		trunk/src/version.sh (File Modified) 


jilles      2006/12/30 17:18:45 UTC	(20061230-7415)
  Log:
  Update requirements documentation for sethost_sts().
  

  Changes:	Modified:
  +3 -1		trunk/include/phandler.h (File Modified) 


jilles      2006/12/30 15:24:51 UTC	(20061230-7413)
  Log:
  Move "Setting your host to \2%s\2." notice to protocol
  modules that need it, so that it is not sent for ircds
  which already notify users of a host change (e.g. charybdis).
  

  Changes:	Modified:
  +0 -6		trunk/modules/nickserv/vhost.c (File Modified) 
  +1 -0		trunk/protocol/hybrid.c (File Modified) 
  +1 -0		trunk/protocol/inspircd10.c (File Modified) 
  +1 -0		trunk/protocol/inspircd11.c (File Modified) 